fix weird white space between library and player

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -28,7 +28,7 @@ h4 {
 }
 
 .library-active {
-  margin-left: 20%;
+  margin-left: 150px;
 }
 
 @import "./song";
